# REDRust

./: Cargo.toml  README.md  build.rs
src/: main.rs  scanner.rs
ui/: app.slint
