[package]
name = "RED"
version = "1.0.0"
edition = "2024"
build = "build.rs"

[dependencies]
slint = "1.17.0"
ignore = "0.4.27"
rfd = "0.17.2"
trash = "5.2.6"
wildmatch = "2.6.1"
clap = { version = "4.6.1", features = ["derive"] }
rayon = "1.12.0"
rustc-hash = "2.1.3"

[build-dependencies]
slint-build = "1.17.0"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61.2", features = ["Win32_System_Console"] }
